--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Landing Area -->
     <div class="row" id="main-area">
-        <img src="images/imag.jpg" alt="Tushar Kumar Rajput" width="350" height="350" >
+        <img src="images/image.png" alt="Tushar Kumar Rajput" width="350" height="350" >
         <section class="column" id="my-intro">
             <h3 id="greet"><b><span>नमस्ते</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: whitesmoke;">|</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span >HELLO</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: whitesmoke;">|</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span >BONJOUR</span></b></h3>
             <h3>I'm&nbsp;&nbsp;<span style="font-size:35px;">TUSHAR KUMAR RAJPUT</span></h3>
